# parallelization-of-3d-rendering

./: .gitattributes  Cargo.toml  README.md
docs/: Casovy_harmonogram.xlsx  Paralelizace_3D_renderingu.docx  Paralelizace_3D_renderovani.docx  ~$ralelizace_3D_renderovani.docx
examples/: README.md  framework.rs
examples/cube/: README.md  main.rs  shader.wgsl
examples/gpu-driven-rendering/: README.md  main.rs  shader.wgsl  shapes.rs
examples/gpu-driven-rendering/shapes/: cube.rs  cylinder.rs  sphere.rs
examples/post-processing/: README.md  helper.rs  main.rs  shader.wgsl
examples/post-processing/effects/: contour.rs  contour.wgsl  final_sample.wgsl  mod.rs  tint.rs  tint.wgsl
examples/triangle/: README.md  main.rs  shader.wgsl
src/: README.md  framework.rs  main.rs  shader.wgsl  shapes.rs
src/shapes/: cube.rs  cylinder.rs  sphere.rs
