[package]
name = "paralelizace_3d_renderovani"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
genmesh = "0.6.2"
bytemuck = { version = "1.12.1", features=["derive"] }
glam = "0.21.3"

winit = "0.27.4"
pollster = "0.2.5"
async-executor = "1.4.1"
log = "0.4.17"
env_logger = "0.9.1"

[dependencies.wgpu]
package = "wgpu"
version = "0.14.0"

[dependencies.wgt]
package = "wgpu-types"
version = "0.14.0"