[package]
name = "paralelizace_3d_renderovani"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.27.4"
pollster = "0.2.5"
async-executor = "1.5.0"
bytemuck = { version = "1.12.3", features = ["derive"] }
glam = "0.22.0"

[dependencies.wgpu]
package = "wgpu"
version = "0.14.0"

[dependencies.wgt]
package = "wgpu-types"
version = "0.14.0"

[[example]]
name = "triangle"

[[example]]
name = "cube"