[package]
name = "paralelizace_3d_renderovani"
version = "1.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.27.4"
pollster = "0.2.5"
async-executor = "1.5.0"
bytemuck = { version = "1.12.3", features = ["derive"] }
glam = "0.22.0"
genmesh = "0.6.2"
image = "0.24.5"
bitflags = "1.3.2"

[dependencies.wgpu]
package = "wgpu"
version = "0.14.0"